--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ img{
 .grid{
     display: grid;
     gap: 2rem 1.5rem;
-    grid-template-columns: repeat(2 1fr);
+    grid-template-columns: repeat(2, 1fr);
     text-align: center;
 }
 .item img{
