--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,12 @@ img{
         gap: 3rem 2rem;
         grid-template-columns: repeat(3, 1fr);
     }
+    .item img{
+        margin-bottom: .5rem;
+    }
+    .item p{
+        font-size: 1rem;
+    }
 
 
     /* ヘッダーカバー画像 */
