--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,11 @@ img{
     }
     .item-big{
         grid-column: 1/3;
+        grid-row: 1/3;
+    }
+    .item-big img{
+        height: 94.5%;
+        width: 100%;
     }
 
 
