--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ img{
     
     /* MENU */
     .cover-menu{
-        background-image: url(../images/cover-news-l.webp);
+        background-image: url(../images/cover-menu-l.webp);
     }
     .grid{
         gap: 3rem 2rem;
